{
    "name": "Player",
    "maps": [
        {
            "name": "BasicActions",
            "id": "ea44aace-e530-465b-95c9-bf5b84c3c844",
            "actions": [
                {
                    "name": "RotRight",
                    "type": "Button",
                    "id": "d7162fe6-c710-4425-b988-b826154c45d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotLeft",
                    "type": "Button",
                    "id": "96b9e6d9-5323-4ee8-9ee9-dcdde3c75484",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamUp",
                    "type": "Button",
                    "id": "b8520e41-9d83-4296-b427-3bbe4e5c2907",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamDown",
                    "type": "Button",
                    "id": "499b5e13-3d14-44e3-9b25-20582bd59233",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamRight",
                    "type": "Button",
                    "id": "ff3e932b-df8d-49f1-bb45-2a741655b603",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamLeft",
                    "type": "Button",
                    "id": "2b0acae3-88bb-45fe-a34a-985013c6b4e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd7e9442-7cd0-49aa-a2fc-e17b53b9650a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "499fa2d5-c23a-4186-b390-2a06216f74ce",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83ea3de8-afd7-456a-88e1-747458936e3f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0624c562-9640-4244-bce9-09722ac49243",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "268c0f98-11f6-4ad9-ba84-1528cb336fc7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e761d139-f38b-47f2-9080-ca6fefdcf884",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}